Squashed alpha-1.5.4-pre08
commit a34f0f1115789f8177b2c244609d813d8e5c0e85
Merge: b9f0f35 11e83d8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 20:56:50 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit b9f0f35e2ad83bcb8134cac95ba60dd44593984b
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 20:56:34 2016 +0100

    Copyright 2016

commit 841eae1023b83d33b24b69a1fc79c4f257b01934
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 20:54:07 2016 +0100

    Note style

commit 22cc40ae87294ab0f83f9cdcee14fec6ce72387b
Merge: 1086a69 8a4929f
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 19:50:19 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 11e83d83244f0a3f4e8fe5f465015d7ee4dd01a4
Merge: b838b74 22cc40a
Author: Weblate <noreply@weblate.org>
Date:   Sat Jan 9 19:50:15 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit b838b749a3d6c455fd147fa33bd8dd6e064044f0
Author: k ks <kmshts@naver.com>
Date:   Sat Jan 9 19:48:47 2016 +0100

    Translated using Weblate (Korean)

    Currently translated at 100.0% (1902 of 1902 strings)

commit 1086a69b9affb516ab73b69a016d9c534aa5aa1c
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 9 19:50:08 2016 +0100

    fix java.util.ConcurrentModificationException

commit 8a4929ff9d5f9fbc79dd67c2c7ae57fc01b7656b
Merge: ff09083 6c72ff6
Author: Weblate <noreply@weblate.org>
Date:   Sat Jan 9 19:45:51 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit ff090833367b40f68f056850294c5ec375256dee
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Wed Jan 6 15:28:38 2016 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.8% (1899 of 1902 strings)

commit 2c634fd4a719594c40df8ca4c0ac8aef27e1b554
Author: k ks <kmshts@naver.com>
Date:   Sat Jan 9 19:41:08 2016 +0100

    Translated using Weblate (Korean

--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -223,13 +223,14 @@ connector_label=Oznaka poveznika
 connector_lines=Vrsta crte poveznika
 connector_shapes=Oblik poveznika
 ConnectorColorAction.text=Boja poveznika...
+ConvertCloneToIndependentNodeAction.text=Napravi duplikat
 CopyAction.text=Kopiraj
 CopyAction.tooltip=Kopiraj odabranu granu
 CopyAttributes.text=Kopiraj obilje\u017Eje
 CopyIDAction.text=Kopiraj ID \u010Dvora
 CopyMapStylesAction.text=Kopiraj stil mape...
 CopyNodeURIAction.text=Kopiraj URL (vezu) \u010Dvora
-copyright=Copyright \u00A9 2000-2015 Freeplane tim i ostali
+copyright=Copyright \u00A9 2000-2016 Freeplane tim i ostali
 CopySingleAction.text=Kopiraj pojedina\u010Dno
 CopySingleAction.tooltip=Kopiraj samo odabrani \u010Dvor
 CopyStyleExtensionsAction.text=Umetni stil povezanog sadr\u017Eaja
@@ -244,7 +245,7 @@ CutAction.text=Izre\u017Ei
 decrease_branch_font_size=Manja slova
 DecreaseNodeFontAction.text=Manja slova
 default=Zadano
-defaultAuxillaryWordList=neki, odre\u0111eni, od
+defaultAuxiliaryWordList=neki, odre\u0111eni, od
 DefaultColorAction.text=Zadana boja
 defaultstyle.attributes=Obilje\u017Eja
 defaultstyle.details=Detalji
@@ -1190,6 +1191,7 @@ OptionPanel.rectangle=Pravokutnik
 OptionPanel.relative=Relativne
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Pitaj"  (use in doubt).<br>"Da" prika\u017Ei ure\u0111iva\u010D za bolje oblikovanje teksta .<br>"Ne" prika\u017Ei jednostavni tekstualni ure\u0111iva\u010D.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Koristi bolje oblikovani tekst za zaljepljene \u010Dvorove
+OptionPanel.remindersBlink=Treptaju\u0107i podsjetnik
 OptionPanel.remove_notes_without_question=Obrisati bilje\u0161ke bez upita?
 OptionPanel.remove_notes_without_question.tooltip=Ako je polje odabrano pripadaju\u0107e bilje\u0161ke odabranog \u010Dvora bit \u0107e obrisane bez potvrde.Ovo mo\u017Ee prouzro\u010Diti gubitak informacija ukoliko nismo pa\u017Eljivi kod brisanja.
 OptionPanel.resources_use_default_font_for_notes_too=Koristi zadani font za bilje\u0161ke
@@ -1316,7 +1318,7 @@ OptionPanel.spelling_opt_ignore_capitalization=Zanemari VELIKA SLOVA na po\u010D
 OptionPanel.spelling_opt_ignore_words_with_numbers=Zanemari rije\u010Di koje sadr\u017Ee brojeve
 OptionPanel.spelling_opt_suggestions_limit_dialog=Maksimalan broj predlo\u017Eenih rje\u010Di u dijalogu
 OptionPanel.spelling_opt_suggestions_limit_menu=Maksimalan broj predlo\u017Eenih rje\u010Di u izborniku
-OptionPanel.SplitToWordsAction.auxillaryWordList=pomo\u0107ni popis rije\u010Di
+OptionPanel.SplitToWordsAction.auxiliaryWordList=pomo\u0107ni popis rije\u010Di
 OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=ostavi izvorni \u010Dvor prazan
 OptionPanel.SplitToWordsAction.nodeNumbersInLine=broj \u010Dvora u redu
 OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=spremi orginalni tekst kao detalje
