--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -224,13 +224,14 @@ connector_label=R\u00F3tulo do conector
 connector_lines=Linhas do conector
 connector_shapes=Formas do conector
 ConnectorColorAction.text=Cor do conector...
+ConvertCloneToIndependentNodeAction.text=Criar duplicado
 CopyAction.text=&Copiar
 CopyAction.tooltip=Copiar ramo selecionado
 CopyAttributes.text=Copiar &atributos
 CopyIDAction.text=Copiar ID do n\u00F3
 CopyMapStylesAction.text=Copiar estilo do mapa de...
 CopyNodeURIAction.text=Copiar URL do n\u00F3
-copyright=Copyright \u00A9 2000-2015 Equipa do Freeplane e outros
+copyright=Copyright \u00A9 2000-2016 Equipa do Freeplane e outros
 CopySingleAction.text=Copiar n\u00F3 (&simples)
 CopySingleAction.tooltip=Copiar s\u00F3 o n\u00F3 selecionado
 CopyStyleExtensionsAction.text=Copiar extens\u00F5es do n\u00F3 de estilo
@@ -245,7 +246,7 @@ CutAction.text=Cor&tar
 decrease_branch_font_size=Reduzir letra
 DecreaseNodeFontAction.text=Reduzir letra
 default=Predefini\u00E7\u00E3o
-defaultAuxillaryWordList=um, o, de
+defaultAuxiliaryWordList=um, o, de
 DefaultColorAction.text=Cor predefinida
 defaultstyle.attributes=Atributos
 defaultstyle.details=Detalhes
@@ -1193,6 +1194,7 @@ OptionPanel.rectangle=Ret\u00E2ngulo
 OptionPanel.relative=Relativo
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Perguntar" pergunta-lhe (use se tem d\u00FAvidas).<br>"Sim" mostra o editor de Rich Text.<br>"N\u00E3o" mostra o editor de texto simples.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Use Rich Text para n\u00F3s colados
+OptionPanel.remindersBlink=Piscar dos lembretes
 OptionPanel.remove_notes_without_question=Remover notas sem confirmar?
 OptionPanel.remove_notes_without_question.tooltip=Se esta caixa estiver marcada, as notas dos n\u00F3s selecionados s\u00E3o removidas sem confirma\u00E7\u00E3o. Isto pode causar perda de informa\u00E7\u00E3o n\u00E3o intencional.
 OptionPanel.resources_use_default_font_for_notes_too=Usar letra predefinida tamb\u00E9m para as notas
@@ -1319,7 +1321,7 @@ OptionPanel.spelling_opt_ignore_capitalization=Ignorar mai\u00FAsculas no princ\
 OptionPanel.spelling_opt_ignore_words_with_numbers=Ignorar palavras com n\u00FAmeros
 OptionPanel.spelling_opt_suggestions_limit_dialog=N\u00FAmero m\u00E1ximo de sugest\u00F5es na janela
 OptionPanel.spelling_opt_suggestions_limit_menu=N\u00FAmero m\u00E1ximo de sugest\u00F5es no menu
-OptionPanel.SplitToWordsAction.auxillaryWordList=lista de palavras auxiliares
+OptionPanel.SplitToWordsAction.auxiliaryWordList=lista de palavras auxiliares
 OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=manter n\u00F3 original vazio
 OptionPanel.SplitToWordsAction.nodeNumbersInLine=n\u00FAmero do n\u00F3 na linha
 OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=gravar texto original como detalhes
