--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -819,6 +819,7 @@ mode_File=Explorateur de fichiers
 mode_MindMap=Concepteur
 mode_na=Mode indisponible
 mode_status=Bascul\u00E9 en mode {0}
+mode_StyleMap=Modification du style
 mode_title=Freeplane - {0}
 modes=Modes
 ModesMenuAction.Browse.text=Visionneuse de cartes
@@ -1310,7 +1311,7 @@ OptionPanel.spelling_opt_ignore_capitalization=Ignorer les mots d\u00E9butant pa
 OptionPanel.spelling_opt_ignore_words_with_numbers=Ignorer les mots contenant des nombres
 OptionPanel.spelling_opt_suggestions_limit_dialog=Nombre de suggestions dans la fen\u00EAtre
 OptionPanel.spelling_opt_suggestions_limit_menu=Nombre de suggestions dans le menu
-OptionPanel.SplitToWordsAction.auxillaryWordList=Liste de mots auxiliaires
+OptionPanel.SplitToWordsAction.auxiliaryWordList=Liste de mots auxiliaires
 OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=Laisser le n\u0153ud d'origine vide
 OptionPanel.SplitToWordsAction.nodeNumbersInLine=num\u00E9ro du n\u0153ud dans l'enregistrement
 OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=Enregistrer le n\u0153ud d'origine comme d\u00E9tail
