Squashed beta-1.5.5-pre01
commit 258e64f11659d1df68ad25adecfac0d13aff77ed
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 22:31:05 2016 +0100

    [bugs:#2300] other place in code

commit bb5eaad1e0e4f7cad67270b85effdb1aa4ae83ce
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 22:24:32 2016 +0100

    [bugs:#2300] Fold Status of Sibling Node Prior to Filtering Inhibits
    Mouse-Clicking Folding

commit 5472e13645117bbcfb5a98147048d628864b7eed
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:59:24 2016 +0100

    History

commit 7c57dbeb428474a0378c5fc1092730d18c8b5d5a
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:46:45 2016 +0100

    Use even darker blue and green in inline editor

commit e41feacb508aa67adcea00058a1a3009941c0364
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:44:48 2016 +0100

    Version 1.5.5 beta

commit 5730cdc3a4f677d8fdc2f6edc838c6a882fff564
Merge: d684f01 9ed4673
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:38:48 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit d684f012f6a1f3855b8d6d6499af815f3fb41f6d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:38:37 2016 +0100

    Do not try to select hidden nodes on map opening

commit a9515046dd5908a7b63fd2f2b32ee0ba5fbc37c7
Merge: eb6a31d 37e60b5
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 16 21:33:44 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 9ed467315d7f5749cb0b8093a7ab5d2bc2c6a84f
Merge: 1eeef5c a951504
Author: Weblate <noreply@weblate.org>
Date:   Sat Jan 16 21:33:39 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 1eeef5c298191e1d6ef42d719993bc9537434cf3
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Sat Jan 16 14:27:34 2016 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.8% (1911 

--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -766,7 +766,7 @@ map_locked_by_open=<html>\u30DE\u30C3\u30D7 {0} \u306F\u5225\u306E\u30E6\u30FC\u
 map_locked_by_save_as=<html>\u30DE\u30C3\u30D7 {0} \u306F\u5225\u306E\u30E6\u30FC\u30B6 {1} \u304C\u7DE8\u96C6\u4E2D\u3067\u3059\u3002<br>\u300C\u540D\u524D\u3092\u4ED8\u3051\u3066\u4FDD\u5B58...\u300D\u3092\u4E2D\u6B62\u3057\u307E\u3057\u305F\u3002</html>
 map_not_saved=\u30DE\u30C3\u30D7\u306F\u307E\u3060\u4FDD\u5B58\u3055\u308C\u3066\u3044\u307E\u305B\u3093\u3002
 MapBackgroundClearAction.text=\u30AF\u30EA\u30A2
-MapBackgroundColorAction.text=\u30DE\u30C3\u30D7\u306E\u80CC\u666F\u8272...
+MapBackgroundColorAction.text=\u80CC\u666F\u8272...
 MapBackgroundImageAction.text=\u80CC\u666F\u753B\u50CF...
 maps=\u30DE\u30C3\u30D7
 MaxNodeWidth.text=\u6700\u5927\u8868\u793A\u5E45
