--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -912,6 +912,10 @@ not_saved_for_image_error=O mapa tem de ser gravado antes de definir uma imagem 
 not_saved_for_link_error=O mapa tem que ser gravado antes de definir uma liga\u00E7\u00E3o com o seletor de ficheiros
 note_window_location=Posi\u00E7\u00E3o da janela de notas
 notes=Nota
+NotificationOptions.CLOSE=Fechar
+NotificationOptions.REMIND_ME_LATER=Lembrar-me mais tarde
+NotificationOptions.REMOVE_REMINDER=Remover lembrete
+NotificationOptions.SELECT_NODE=Ir para o lembrete
 ok=Aceitar
 OKAction.text=Aceitar
 OnlineReference.text=Mapas de documenta\u00E7\u00E3o online
@@ -1195,6 +1199,7 @@ OptionPanel.relative=Relativo
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Perguntar" pergunta-lhe (use se tem d\u00FAvidas).<br>"Sim" mostra o editor de Rich Text.<br>"N\u00E3o" mostra o editor de texto simples.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Use Rich Text para n\u00F3s colados
 OptionPanel.remindersBlink=Piscar dos lembretes
+OptionPanel.remindersStandardDelay=Atraso do lembrete
 OptionPanel.remove_notes_without_question=Remover notas sem confirmar?
 OptionPanel.remove_notes_without_question.tooltip=Se esta caixa estiver marcada, as notas dos n\u00F3s selecionados s\u00E3o removidas sem confirma\u00E7\u00E3o. Isto pode causar perda de informa\u00E7\u00E3o n\u00E3o intencional.
 OptionPanel.resources_use_default_font_for_notes_too=Usar letra predefinida tamb\u00E9m para as notas
@@ -1504,6 +1509,7 @@ RedoFilterAction.text=Refazer a\u00E7\u00E3o de filtragem
 regular_expressions=Express\u00F5es regulares
 ReminderHookAction.text=Remover lembrete
 ReminderHookAction.tooltip=Remove o lembrete de um n\u00F3.
+reminderNotification=Notifica\u00E7\u00E3o do lembrete
 remove_file_from_list_on_error=O ficheiro {0} n\u00E3o foi aberto. Quer remov\u00EA-lo da lista de ficheiros recentes?
 remove_shortcut_question=Substituir atalho?
 RemoveAllAlwaysUnfoldedNodeFlagsAction.text=Repor n\u00F3s desdobrados
@@ -1837,6 +1843,12 @@ TimeListAction.text=Gerir tarefas...
 TimeListAction.tooltip=Mostra todos os agendamentos e os n\u00F3s correspondentes.
 TimeManagementAction.text=Gerir tempo...
 TimeManagementAction.tooltip=<html>Mostra o m\u00F3dulo Calend\u00E1rio de Kai Toedter.</html>
+TimePeriodUnits.days=dias
+TimePeriodUnits.hours=horas
+TimePeriodUnits.minutes=minutos
+TimePeriodUnits.ms=ms
+TimePeriodUnits.seconds=segundos
+TimePeriodUnits.weeks=semanas
 ToggleChildrenFoldedAction.text=(Des)dobrar n\u00F3s-filho
 ToggleDetailsAction.text=Ocultar detalhes
 ToggleFBarAction.text=Barra de teclas de fun\u00E7\u00E3o
