--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -907,6 +907,10 @@ not_saved_for_image_error=The map must be saved before you can set an image by f
 not_saved_for_link_error=The map must be saved before you can set a link by file chooser
 note_window_location=Note panel position
 notes=Note
+NotificationOptions.CLOSE=Close
+NotificationOptions.REMIND_ME_LATER=Remind me later
+NotificationOptions.REMOVE_REMINDER=Remove reminder
+NotificationOptions.SELECT_NODE=Go to reminder
 ok=&OK
 OKAction.text=&OK
 OnlineReference.text=Documentation Maps Online
@@ -1189,6 +1193,7 @@ OptionPanel.relative=Relative
 OptionPanel.remind_type_of_new_nodes.tooltip=<html>"Ask" will ask you (use in doubt).<br>"Yes" displays the rich text editor.<br>"No" displays the plain text editor.</html>
 OptionPanel.remind_use_rich_text_in_new_nodes=Use rich text for pasted nodes
 OptionPanel.remindersBlink=Reminders blink
+OptionPanel.remindersStandardDelay=Reminder delay
 OptionPanel.remove_notes_without_question=Remove notes without question?
 OptionPanel.remove_notes_without_question.tooltip=If this check box is set the notes belonging to the selected nodes are removed without confirmation. This can cause loss of information if pressed without intention.
 OptionPanel.resources_use_default_font_for_notes_too=Use default font for notes too
@@ -1496,6 +1501,7 @@ RedoFilterAction.text=Redo filter action
 regular_expressions=Regular expressions
 ReminderHookAction.text=Remove reminder
 ReminderHookAction.tooltip=Removes a reminder from a node.
+reminderNotification=Reminder notification
 remove_file_from_list_on_error=File {0} not opened. Remove it from the last opened file list?
 remove_shortcut_question=Replace shortcut?
 RemoveAllAlwaysUnfoldedNodeFlagsAction.text=Reset unfolded nodes
@@ -1862,6 +1868,12 @@ TimeListAction.text=Manage tasks ...
 TimeListAction.tooltip=Shows all scheduled times and the corresponding nodes.
 TimeManagementAction.text=Manage time...
 TimeManagementAction.tooltip=<html>Shows the calendar module by Kai Toedter.</html>
+TimePeriodUnits.days=days
+TimePeriodUnits.hours=hours
+TimePeriodUnits.minutes=minutes
+TimePeriodUnits.ms=ms
+TimePeriodUnits.seconds=seconds
+TimePeriodUnits.weeks=weeks
 ToggleChildrenFoldedAction.text=(Un)fold children
 ToggleDetailsAction.text=Hide details
 ToggleFBarAction.text=F-Bar
