Squashed alpha-1.5.4-pre06
commit 69f85e1d464badec684d326ccdd406a6e76cb4a0
Merge: 75a3607 f5d08cc
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Jan 1 18:04:21 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 75a360710b668dc6cf90b0edb4dbedff5a5e6a1e
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Jan 1 18:04:11 2016 +0100

    Fix standard.mm

commit f5d08cca712a3cf73ae2e58d8a0018596c5e7750
Author: Predrag Cuklin <pcuklin@gmail.com>
Date:   Fri Jan 1 17:46:45 2016 +0100

    Translated using Weblate (Croatian)

    Currently translated at 100.0% (1899 of 1899 strings)

commit ad2e6109044890e339444e44c78810a7b9954504
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Jan 1 16:38:08 2016 +0100

    Fix NPE

commit c31f97485df7003375e992e948fef51ac88e3978
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Jan 1 16:26:20 2016 +0100

    Fixes in FButtonBar : display actions for combined modifiers

commit e93ffc9f8cb857406c1d379dda5e6c3fd9cfe0f1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Jan 1 15:54:36 2016 +0100

    [bugs:#2277] Svg images in nodes not centered at opening the map

commit 90286fe2ec236deb130b7fc211e5b593270eede7
Merge: 678f8bd b824e13
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Jan 1 15:32:58 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 678f8bd3e7ba5fe638515a7300cd4ab3c7c13e49
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Fri Jan 1 15:32:47 2016 +0100

    [bugs:#2283] esc key stops working to return to root node**

commit b824e13a988b8d9a9c49d8229426d3a674fc79f5
Merge: d9e23f6 1d4f3bf
Author: Weblate <noreply@weblate.org>
Date:   Fri Jan 1 15:06:30 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit d9e23f63fe5b5aa668fb0deaec66136792b9c179
Author: Ldm Public <ldmpub@gmail.com>
Date:   Fri Jan 1 10:57:53 2016 +0100

    Translated using Weblate (French)

    Currently t

--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -974,6 +974,8 @@ OptionPanel.combined=Kombinirano
 OptionPanel.compare_as_number=Usporedi kao brojeve
 OptionPanel.convert_to_current_version=<html>\u017Delite li automatsko pretvaranje mapa starih verzija Freeplanea <br>u trenutnu verziju?</html>
 OptionPanel.convert_to_current_version.tooltip=<html>Samo za vrlo velike mape za koje nije potrebno pretvaranje <br>(a za to je potrebno stru\u010Dno znanje), mo\u017Eete otvarati bez pretvaranja.</html>
+OptionPanel.copyFormatToNewSibling=Kopiranje oblika za nove \u010Dvorove (bra\u0107u)
+OptionPanel.copyFormatToNewSiblingIncludesIcons=Kopiraj oblik sa ikonama 
 OptionPanel.cs=\u010Ce\u0161ki
 OptionPanel.cut_nodes_without_question=Izrati \u010Dvor(ove) bez potvrde?
 OptionPanel.cut_nodes_without_question.tooltip=Ako je polje odabrano \u010Dvorovi \u0107e biti izrezani bez potvrde. Ovo mo\u017Ee prouzro\u010Diti gubitak informacija ukoliko nismo pa\u017Eljivi kod brisanja.
@@ -1209,6 +1211,7 @@ OptionPanel.script_user_key_name_for_signing=Neobavezni korisni\u010Dki klju\u01
 OptionPanel.script_user_key_name_for_signing.tooltip=<html>\u017Delite li potpisati svoju skriptu, unesite pseudonim (izmi\u0161ljeni klju\u010D) ovdje. <br>Lozinka je pohranjena u bazu klju\u010Deva. <br>Lozinaka klju\u010Dnog tajnog klju\u010Da mora se podudarati s lozinkom u bazi klju\u010Deva (to je zadano).</html>
 OptionPanel.scrollbar_increment=Brzina
 OptionPanel.scrolling_speed=Brzina automatskog klizanja prikaza mape
+OptionPanel.scrollOnUnfold=Pomak mape nakon rasklapanja \u010Dvorova
 OptionPanel.selection_method=Na\u010Din odabira
 OptionPanel.selection_method.tooltip=<html> pomo\u0107u ove opcije mo\u017Eete omogu\u0107iti/onemogu\u0107iti na\u010Din odabira \u010Dvora sa zaka\u0161njenjem.</html>
 OptionPanel.selection_method_by_click=Sa klikom
