--- a/freeplane/resources/translations/Resources_fr.properties
+++ b/freeplane/resources/translations/Resources_fr.properties
@@ -274,7 +274,9 @@ edge=Ligne
 edge_is_formatted_by_style=Le format des lignes des n\u0153uds est d\u00E9finit gr\u00E2ce aux styles. Si besoin, modifiez les styles.
 edge_style=Style de ligne
 edge_width=\u00C9paisseur de ligne
+edge_widths=Largeur de ligne
 EdgeColorAction.text=Couleur de ligne...
+EdgeProperties=Propri\u00E9t\u00E9s de la ligne
 EdgeStyleAction.bezier.text=Courbe
 EdgeStyleAction.bezier.tooltip=Le style de ligne est une courbe
 EdgeStyleAction.hide_edge.text=Invisible
@@ -403,6 +405,8 @@ filter=F&iltres
 filter_add=Ajouter
 filter_and=Et
 filter_any_text=Toutes les zones de texte
+filter_clone_snapshot=S\u00E9lection clon\u00E9e
+filter_clones=Clones de la s\u00E9lection
 filter_conditions=Filtres
 filter_contains=contient
 filter_created_after=cr\u00E9\u00E9 apr\u00E8s
@@ -450,6 +454,7 @@ filter_selected_node_view_snapshot=N\u0153uds de la s\u00E9lection
 filter_style=Style
 filter_time=Date
 FilterComposerDialog.save=Enregistrer sous...
+FilterCondition=Conditions de filtrage
 filterConditions=Filtres personnalis\u00E9s
 filters_not_loaded=Les filtres n'ont pas pu \u00EAtre charg\u00E9s, le fichier est corrompu
 find=Rechercher
@@ -966,6 +971,8 @@ OptionPanel.combined=Mixte
 OptionPanel.compare_as_number=Comparer comme nombres
 OptionPanel.convert_to_current_version=<html>Convertir automatiquement les cartes des versions ant\u00E9rieures <br> de Freeplane \u00E0 la version courante ?</html>
 OptionPanel.convert_to_current_version.tooltip=<html>Seulement pour les tr\u00E8s grandes cartes qui n'ont pas besoin d'\u00EAtre converties<br>(seulement si vous savez ce que vous faites) vous pouvez ouvrir les cartes sans conversion.</html>
+OptionPanel.copyFormatToNewSibling=Appliquer la mise en forme aux n\u0153uds fr\u00E8res
+OptionPanel.copyFormatToNewSiblingIncludesIcons=Copier la mise en forme avec les ic\u00F4nes 
 OptionPanel.cs=Tch\u00E8que
 OptionPanel.cut_nodes_without_question=Couper les n\u0153uds sans confirmation
 OptionPanel.cut_nodes_without_question.tooltip=Coupe imm\u00E9diatement les n\u0153uds, sans confirmation
@@ -1200,6 +1207,7 @@ OptionPanel.script_user_key_name_for_signing=Alias de la clef utilisateur pour s
 OptionPanel.script_user_key_name_for_signing.tooltip=<html>Si vous d\u00E9sirez signer vos scripts, entrez l'alias de la cl\u00E9 ici. <br>La cl\u00E9 doit se trouver dans le trousseau par d\u00E9faut. <br>Le mot de passe de la cl\u00E9 priv\u00E9e doit correspondre au mot de passe du trousseau.</html>
 OptionPanel.scrollbar_increment=Vitesse
 OptionPanel.scrolling_speed=Vitesse de centrage automatique (de 1 \u00E0 30)
+OptionPanel.scrollOnUnfold=Centrer la carte lors du d\u00E9pliage
 OptionPanel.selection_method=S\u00E9lection de noeud
 OptionPanel.selection_method.tooltip=D\u00E9finit la mani\u00E8re de s\u00E9lectionner les n\u0153uds.
 OptionPanel.selection_method_by_click=Au clic
@@ -1302,7 +1310,9 @@ OptionPanel.spelling_opt_ignore_capitalization=Ignorer les mots d\u00E9butant pa
 OptionPanel.spelling_opt_ignore_words_with_numbers=Ignorer les mots contenant des nombres
 OptionPanel.spelling_opt_suggestions_limit_dialog=Nombre de suggestions dans la fen\u00EAtre
 OptionPanel.spelling_opt_suggestions_limit_menu=Nombre de suggestions dans le menu
+OptionPanel.SplitToWordsAction.auxillaryWordList=Liste de mots auxiliaires
 OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=Laisser le n\u0153ud d'origine vide
+OptionPanel.SplitToWordsAction.nodeNumbersInLine=num\u00E9ro du n\u0153ud dans l'enregistrement
 OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=Enregistrer le n\u0153ud d'origine comme d\u00E9tail
 OptionPanel.sr=Serbe /  \u0441\u0440\u043F\u0441\u043A\u0438
 OptionPanel.standard_template=Mod\u00E8le de carte par d\u00E9faut (choisissez une valeur ou entrez le chemin)
@@ -1336,8 +1346,10 @@ OptionPanel.time_for_delayed_selection=D\u00E9lai pour la s\u00E9lection
 OptionPanel.time_for_delayed_selection.tooltip=<html>D\u00E9lai de s\u00E9lection des n\u0153uds lorsque la souris survole le n\u0153ud (en millisecondes).<br>Saisissez 1 si vous souhaitez une s\u00E9lection rapide.
 OptionPanel.toolTipManager.dismissDelay=Dur\u00E9e d'affichage (en millisecondes)
 OptionPanel.toolTipManager.initialDelay=D\u00E9lai avant affichage (en millisecondes)
-OptionPanel.toolTipManager.max_tooltip_width=Largeur des infos-bulles
-OptionPanel.toolTipManager.max_tooltip_width.tooltip=Largeur par d\u00E9faut des infos-bulles (en pixels)
+OptionPanel.toolTipManager.max_tooltip_height=Hauteur maximale des infobulles
+OptionPanel.toolTipManager.max_tooltip_height.tooltip=Hauteur maximale des infobulles en pixels.
+OptionPanel.toolTipManager.max_tooltip_width=Largeur maximale des infos-bulles
+OptionPanel.toolTipManager.max_tooltip_width.tooltip=Largeur maximale des infos-bulles en pixels.
 OptionPanel.toolTipManager.reshowDelay=D\u00E9lai de r\u00E9affichage (en millisecondes)
 OptionPanel.tr=Turque
 OptionPanel.uk_UA=Ukrainien
@@ -1483,6 +1495,8 @@ ReminderHookAction.text=Supprimer l'alerte
 ReminderHookAction.tooltip=Supprime l'alerte d'un n\u0153ud
 remove_file_from_list_on_error=Le fichier {0} est introuvable ! Souhaitez-vous le retirer de la liste des fichiers r\u00E9cents ?
 remove_shortcut_question=Remplacer le raccourci ?
+RemoveAllAlwaysUnfoldedNodeFlagsAction.text=R\u00E9-initialiser les n\u0153uds d\u00E9pli\u00E9s
+RemoveAllAlwaysUnfoldedNodeFlagsAction.tooltip=Permettre le pliage pour tous les n\u0153uds
 RemoveAllIconsAction.text=Supprimer toutes les ic\u00F4nes
 RemoveConnectorAction.text=Supprimer le connecteur
 RemoveEncryption.text=Supprimer la protection
@@ -1551,6 +1565,7 @@ set_accelerator_on_next_click_action=Pour cr\u00E9er un nouveau raccourci :\ns\u
 SetAccelerator.dialogTitle=Raccourcis clavier
 SetAccelerator.keystrokeDetected=La s\u00E9quence de raccourci "{0}" n''est associ\u00E9e \u00E0 aucune commande.
 SetAcceleratorOnNextClickAction.text=Cr\u00E9er un nouveau raccourci...
+SetAlwaysUnfoldedNodeFlagsAction.text=Conserver les n\u0153uds d\u00E9pli\u00E9s
 SetImageByFileChooserAction.text=N\u0153ud image (choisir un fichier ou saisir un lien)...
 SetLinkAnchorAction.text=M\u00E9moriser le n\u0153ud
 SetLinkAnchorAction.tooltip=M\u00E9morise le n\u0153ud courant pour la cr\u00E9ation de lien
@@ -1761,6 +1776,7 @@ split=Diviser
 SplitConditionAction.text=Dupliquer sans n\u00E9gation
 SplitNode.text=Diviser le n\u0153ud
 SplitNode.tooltip=Divise le n\u0153ud en plusieurs n\u0153uds de m\u00EAme niveau, chaque ligne devient un n\u0153ud
+SplitToWordsAction.text=Diviser en {0} mots par ligne
 STANDARD_FORMAT=Standard
 stop_processing=Ne pas \u00E9valuer les styles suivants
 StringFlavorHandler=Coller en texte brut en conservant la hi\u00E9rarchie
