Squashed alpha-1.5.4-pre07
commit dfbac4df830977de38d8f94a1497df7da0e284c7
Author: Volker Boerchers <boercher@web.de>
Date:   Sat Jan 2 20:49:59 2016 +0100

    renamed Proxy methods for clones and improved documentation for understandablity

commit 7c27f2353857a49cceeaf1ddfdf817cea65211c1
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 2 18:46:55 2016 +0100

    [bugs:#2280] (Applies to filtered nodes) Button / Option Does Not Work

commit 64d2ca1de4fb4a56d4cabaf74e9c3853bbfb4fb8
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 2 17:56:47 2016 +0100

    [bugs:#2286] Two " Assign hot key "

commit 1c9c31f354e51baa6f24d2c7e90691583a1957e0
Merge: 0a0149d 002f220
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 2 17:52:33 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 0a0149dc3b67fb43ec810c4e6a9a3542503d25b7
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 2 17:52:19 2016 +0100

    Make build compatible with Java 6

commit 002f220f393aeccecbf61c9321debc18a00a150c
Merge: f03e096 dad5576
Author: Weblate <noreply@weblate.org>
Date:   Sat Jan 2 15:32:41 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit f03e096fa22d7a5e38dafd51f509652f07a5a0a0
Author: Олександр Пилипчук <pilipchukap@rambler.ru>
Date:   Sat Jan 2 13:25:47 2016 +0100

    Translated using Weblate (Ukrainian)

    Currently translated at 99.8% (1897 of 1900 strings)

commit dad5576f99b24d1cb92720750932b4bcc15eccef
Merge: 3017ae7 83c6949
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 2 15:32:40 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit 3017ae7e74a1a0a9d73f60254b47945a50ae6c52
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sat Jan 2 15:32:20 2016 +0100

    Add SetAcceleratorOnNextClickAction to style editor menu

commit 5aa08b3bd5e0df6439af737081ee21687db7508d
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Sa

--- a/freeplane/resources/translations/Resources_hr.properties
+++ b/freeplane/resources/translations/Resources_hr.properties
@@ -821,6 +821,7 @@ mode_File=Preglednik datoteka
 mode_MindMap=Mentalne mape
 mode_na=Oblik nije dostupan
 mode_status=Oblik promijenjen u {0}
+mode_StyleMap=Ure\u0111ivanje stila
 mode_title=Freeplane - {0}
 modes=Oblici
 ModesMenuAction.Browse.text=Preglednik mentalnih mapa
