--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -823,6 +823,7 @@ mode_File=Modo Ficheiro
 mode_MindMap=Modo Mapa mental
 mode_na=Modo n\u00E3o dispon\u00EDvel
 mode_status=Modo alterado para {0}
+mode_StyleMap=Edi\u00E7\u00E3o de estilo
 mode_title=Freeplane - {0}
 modes=Modos
 ModesMenuAction.Browse.text=Navegador de mapas
