--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -820,6 +820,7 @@ mode_File=File mode
 mode_MindMap=Mind map mode
 mode_na=Mode not available
 mode_status=Mode changed to {0}
+mode_StyleMap=Style editing
 mode_title=Freeplane - {0}
 modes=Modes
 ModesMenuAction.Browse.text=Map browser
