Squashed alpha-1.5.4-pre11
commit fa6765431c24dd337519c14a9fddab9de59d1826
Merge: b247819 dc008d2
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Jan 12 21:27:46 2016 +0100

    Merge branch '1.5.x' of https://github.com/freeplane/freeplane into 1.5.x

commit b24781943d7ef2be31e45653ad597ea6bf7da567
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Jan 12 21:12:30 2016 +0100

    [bugs:#2298] Conditional Styles do not update attribute list on map
    change

commit f24b794ab7a9cf0dae295600e8115f7246b88e87
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Tue Jan 12 20:57:35 2016 +0100

    Disable quick filter on quick filter button only if condition was not
    changed

commit dc008d25ac502db67912b04c804954a4a91c0a16
Merge: 9ee1e8e 7f7cdf8
Author: Weblate <noreply@weblate.org>
Date:   Mon Jan 11 23:07:19 2016 +0100

    Merge remote-tracking branch 'origin/1.5.x' into 1.5.x

commit 7f7cdf85da2292965e69af1bd63272a0f50badab
Author: Dimitry Polivaev <dpolivaev@gmx.de>
Date:   Mon Jan 11 23:07:19 2016 +0100

    Convert line ends to unix for shell scripts

commit 9ee1e8ed6702e7745b3f5734597dbcdd101bcdc1
Author: hokorobi <hokorobi.hokorobi@gmail.com>
Date:   Mon Jan 11 04:32:38 2016 +0100

    Translated using Weblate (Japanese)

    Currently translated at 99.0% (1883 of 1902 strings)

--- a/freeplane/resources/translations/Resources_ja.properties
+++ b/freeplane/resources/translations/Resources_ja.properties
@@ -455,6 +455,7 @@ filters_not_loaded=\u30D5\u30A3\u30EB\u30BF\u30D5\u30A1\u30A4\u30EB\u304C\u58CA\
 find=\u691C\u7D22
 find_what=\u4F55\u3092\u691C\u7D22\u3057\u307E\u3059\u304B\uFF1F
 FindAction.text=\u691C\u7D22...
+fit_background_to_page=\u80CC\u666F\u753B\u50CF\u30921\u30DA\u30FC\u30B8\u306B\u5408\u308F\u305B\u308B
 fit_map_to_page=\u5168\u4F53\u3092\uFF11\u30DA\u30FC\u30B8\u306B\u53CE\u3081\u308B(&F)
 fit_map_to_page_height=\u7E26\u5E45\u3092\u30DA\u30FC\u30B8\u306B\u5408\u308F\u305B\u308B(&H)
 fit_map_to_page_width=\u6A2A\u5E45\u3092\u30DA\u30FC\u30B8\u306B\u5408\u308F\u305B\u308B(&W)
@@ -886,9 +887,11 @@ NodeListAction.text=\u691C\u7D22\uFF06\u7F6E\u63DB...
 NodeListAction.tooltip=\u30A4\u30F3\u30AF\u30EA\u30E1\u30F3\u30BF\u30EB\u30B5\u30FC\u30C1\u306B\u3088\u308A\u3001\u7F6E\u63DB\u5BFE\u8C61\u30CE\u30FC\u30C9\u304C\u30EA\u30B9\u30C8\u30A2\u30C3\u30D7\u3055\u308C\u307E\u3059\u3002
 NodeShapeAction.bubble.text=\u56F2\u307F(&B)
 NodeShapeAction.fork.text=\u30D5\u30A9\u30FC\u30AF(&F)
+NodeShapeAction.narrow_hexagon.text=\u7D30\u3044\u516D\u89D2\u5F62
 NodeShapeAction.oval.text=\u6955\u5186
 NodeShapeAction.rectangle.text=\u77E9\u5F62
 NodeShapeAction.small_bubble.text=\u5C0F\u3055\u306A\u56F2\u307F
+NodeShapeAction.wide_hexagon.text=\u592A\u3044\u516D\u89D2\u5F62
 NodeUpAction.text=\u30CE\u30FC\u30C9\u3092\u79FB\u52D5\uFF08\u5144\u5F1F\u9593\u3067\u4E0A\u3078\uFF09
 nonboldify_branch=\u592A\u5B57\u89E3\u9664
 nonitalicise_branch=\u659C\u4F53\u89E3\u9664
@@ -962,6 +965,8 @@ OptionPanel.combined=\u8907\u5408
 OptionPanel.compare_as_number=\u6570\u5024\u3068\u3057\u3066\u6BD4\u8F03
 OptionPanel.convert_to_current_version=\u65E7\u30D0\u30FC\u30B8\u30E7\u30F3\u306E Freeplane \u306E\u30DE\u30A4\u30F3\u30C9\u30DE\u30C3\u30D7\u3092\u73FE\u884C\u30D0\u30FC\u30B8\u30E7\u30F3\u306E\u3082\u306E\u306B\u81EA\u52D5\u5909\u63DB\u3057\u307E\u3059\u304B\uFF1F
 OptionPanel.convert_to_current_version.tooltip=<html>\u5DE8\u5927\u30DE\u30C3\u30D7\u306B\u9650\u3063\u3066\u306F\u3001\u30D5\u30A1\u30A4\u30EB\u5909\u63DB\u3059\u308B\u5FC5\u8981\u306F\u3042\u308A\u307E\u305B\u3093\u3002\uFF08\u3053\u308C\u306F\u3001\u5C02\u9580\u77E5\u8B58\u306B\u95A2\u308F<br>\u308B\u4E8B\u9805\u3067\u3059\uFF09\u3002\u305D\u3046\u3057\u305F\u30DE\u30C3\u30D7\u306F\u5909\u63DB\u3057\u306A\u304F\u3066\u3082\u958B\u304F\u3053\u3068\u304C\u3067\u304D\u307E\u3059\u3002</html>
+OptionPanel.copyFormatToNewSibling=\u65B0\u898F\u5144\u5F1F\u30CE\u30FC\u30C9\u3078\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8\u3092\u30B3\u30D4\u30FC
+OptionPanel.copyFormatToNewSiblingIncludesIcons=\u30A2\u30A4\u30B3\u30F3\u4ED8\u304D\u3067\u30D5\u30A9\u30FC\u30DE\u30C3\u30C8\u3092\u30B3\u30D4\u30FC 
 OptionPanel.cs=\u30C1\u30A7\u30B3\u8A9E\uFF0F\u010Desky
 OptionPanel.cut_nodes_without_question=\u30CE\u30FC\u30C9\u5207\u308A\u53D6\u308A\u6642\u306B\u78BA\u8A8D\u3092\u7701\u7565
 OptionPanel.cut_nodes_without_question.tooltip=<html>\u30C1\u30A7\u30C3\u30AF\u3059\u308B\u3068\u3001\u30CE\u30FC\u30C9\u5207\u308A\u53D6\u308A\u6642\u306B\u78BA\u8A8D\u30C0\u30A4\u30A2\u30ED\u30B0\u3092\u8868\u793A\u3057\u307E\u305B\u3093\u3002\u4E0D\u6CE8\u610F\u306B\u3088\u308A\u60C5\u5831<br>\u304C\u5931\u308F\u308C\u308B\u6050\u308C\u304C\u3042\u308A\u307E\u3059\u3002</html>
@@ -1112,6 +1117,7 @@ OptionPanel.max_shortened_text_length=\u30C6\u30AD\u30B9\u30C8\u306E\u6700\u5927
 OptionPanel.metal=Metal
 OptionPanel.min_node_width=\u30CE\u30FC\u30C9\u306E\u6700\u5C0F\u8868\u793A\u5E45
 OptionPanel.motif=Motif
+OptionPanel.narrow_hexagon=\u7D30\u3044\u516D\u89D2\u5F62
 OptionPanel.nb=\u30CE\u30EB\u30A6\u30A7\u30FC\u8A9E\uFF08\u30D6\u30FC\u30AF\u30E2\u30FC\u30EB\uFF09\uFF0FNorsk bokm\u00E5l
 OptionPanel.never_save_folding=\u4FDD\u5B58\u3057\u306A\u3044
 OptionPanel.nl=\u30AA\u30E9\u30F3\u30C0\u8A9E\uFF0FNederlands, Vlaams
@@ -1259,6 +1265,7 @@ OptionPanel.separator.selection_method=\u30CE\u30FC\u30C9\u306E\u9078\u629E
 OptionPanel.separator.single_instance_mode=\u5358\u4E00\u30D7\u30ED\u30B0\u30E9\u30E0\u30A4\u30F3\u30B9\u30BF\u30F3\u30B9
 OptionPanel.separator.size_limits=\u8868\u793A\u5E45
 OptionPanel.separator.spelling=\u30B9\u30DA\u30EB\u30C1\u30A7\u30C3\u30AF\u30AA\u30D7\u30B7\u30E7\u30F3
+OptionPanel.separator.SplitToWordsAction=\u30CE\u30FC\u30C9\u3092\u5358\u8A9E\u306B\u5206\u5272
 OptionPanel.separator.status=\u30B9\u30C6\u30FC\u30BF\u30B9\u30D0\u30FC
 OptionPanel.separator.tooltip=\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7\u8868\u793A\u306E\u6642\u9593
 OptionPanel.separator.undo=\u5143\u306B\u623B\u3059
@@ -1295,6 +1302,10 @@ OptionPanel.spelling_opt_ignore_capitalization=\u8A9E\u306E\u5192\u982D\u306B\u3
 OptionPanel.spelling_opt_ignore_words_with_numbers=\u6570\u5B57\u3092\u542B\u3080\u8A9E\u3092\u7121\u8996
 OptionPanel.spelling_opt_suggestions_limit_dialog=\u30C0\u30A4\u30A2\u30ED\u30B0\u306B\u8868\u793A\u3059\u308B\u5019\u88DC\u306E\u6700\u5927\u5024
 OptionPanel.spelling_opt_suggestions_limit_menu=\u30E1\u30CB\u30E5\u30FC\u306B\u8868\u793A\u3059\u308B\u5019\u88DC\u306E\u6700\u5927\u5024
+OptionPanel.SplitToWordsAction.auxiliaryWordList=\u88DC\u52A9\u5358\u8A9E\u30EA\u30B9\u30C8
+OptionPanel.SplitToWordsAction.leaveOriginalNodeEmpty=\u5206\u5272\u5143\u30CE\u30FC\u30C9\u3092\u7A7A\u767D\u306B\u3059\u308B
+OptionPanel.SplitToWordsAction.nodeNumbersInLine=\u4E00\u5217\u306E\u30CE\u30FC\u30C9\u6570
+OptionPanel.SplitToWordsAction.saveOriginalTextAsDetails=\u5143\u6587\u7AE0\u3092\u30CE\u30FC\u30C9\u306E\u8A73\u7D30\u3068\u3057\u3066\u4FDD\u5B58
 OptionPanel.sr=\u30BB\u30EB\u30D3\u30A2\u8A9E\uFF0F\u0441\u0440\u043F\u0441\u043A\u0438
 OptionPanel.standard_template=\u6A19\u6E96\u30C6\u30F3\u30D7\u30EC\u30FC\u30C8\u30D5\u30A1\u30A4\u30EB
 OptionPanel.standardbackgroundcolor=\u30CE\u30FC\u30C9\u306E\u80CC\u666F
@@ -1326,6 +1337,8 @@ OptionPanel.time_for_delayed_selection=\u81EA\u52D5\u9078\u629E\u307E\u3067\u306
 OptionPanel.time_for_delayed_selection.tooltip=<html>\u30DE\u30A6\u30B9\u30AB\u30FC\u30BD\u30EB\u304C\u30CE\u30FC\u30C9\u4E0A\u306B\u79FB\u3063\u3066\u304B\u3089\u81EA\u52D5\u9078\u629E\u3059\u308B\u307E\u3067\u306E\u6642\u9593(\u30DF\u30EA\u79D2)\u3002\u30DE\u30A6\u30B9\u30AB\u30FC\u30BD<br>\u30EB\u3092\u30CE\u30FC\u30C9\u4E0A\u306B\u79FB\u3059\u3068\u540C\u6642\u306B\u9078\u629E\u3057\u305F\u3044\u5834\u5408\u306F\u3001\u3053\u306E\u5024\u3092\uFF11\u306B\u5909\u66F4\u3057\u3066\u304F\u3060\u3055\u3044\u3002</html>
 OptionPanel.toolTipManager.dismissDelay=\u8868\u793A\u3092\u4E2D\u65AD\u3059\u308B\u307E\u3067\u306E\u6642\u9593(\u30DF\u30EA\u79D2)
 OptionPanel.toolTipManager.initialDelay=\u6700\u521D\u306B\u8868\u793A\u3059\u308B\u307E\u3067\u306E\u6642\u9593(\u30DF\u30EA\u79D2)
+OptionPanel.toolTipManager.max_tooltip_height=\u30CE\u30FC\u30C9\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7\u306E\u6700\u5927\u8868\u793A\u9AD8\u3055
+OptionPanel.toolTipManager.max_tooltip_height.tooltip=\u30CE\u30FC\u30C9\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7\u306E\u6700\u5927\u8868\u793A\u9AD8\u3055\uFF08\u30D4\u30AF\u30BB\u30EB\uFF09
 OptionPanel.toolTipManager.max_tooltip_width=\u30CE\u30FC\u30C9\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7\u306E\u6700\u5927\u8868\u793A\u5E45
 OptionPanel.toolTipManager.max_tooltip_width.tooltip=\u30CE\u30FC\u30C9\u30C4\u30FC\u30EB\u30C1\u30C3\u30D7\u306E\u6700\u5927\u8868\u793A\u5E45(\u30D4\u30AF\u30BB\u30EB)
 OptionPanel.toolTipManager.reshowDelay=\u8868\u793A\u3092\u518D\u958B\u3059\u308B\u307E\u3067\u306E\u6642\u9593(\u30DF\u30EA\u79D2)
@@ -1336,6 +1349,7 @@ OptionPanel.undo_levels=\u5143\u306B\u623B\u3059\u56DE\u6570\u306E\u4E0A\u9650
 OptionPanel.undo_levels.tooltip=\u5143\u306B\u623B\u3059\u64CD\u4F5C\u306E\u4E0A\u9650\u56DE\u6570\u3092\u6307\u5B9A\u3057\u307E\u3059\u3002
 OptionPanel.unfold_on_paste=\u8CBC\u308A\u4ED8\u3051\u6642\u306B\u30CE\u30FC\u30C9\u3092\u5C55\u958B
 OptionPanel.unfold_on_paste.tooltip=\u30C9\u30E9\u30C3\u30B0\uFF06\u30C9\u30ED\u30C3\u30D7\u6642\u306B\u30CE\u30FC\u30C9\u3092\u5C55\u958B\u3057\u307E\u3059\u3002
+OptionPanel.uniform_shape=\u5747\u4E00\u5316
 OptionPanel.use_common_out_point_for_root_node=\u7DDA\u306E\u59CB\u70B9\u3092\u4E00\u70B9\u306B\u96C6\u7D04
 OptionPanel.use_common_out_point_for_root_node.tooltip=\u7DDA\u304C\u30EB\u30FC\u30C8\u30CE\u30FC\u30C9\u306E\u5DE6\u53F3\u305D\u308C\u305E\u308C\u4E00\u70B9\u304B\u3089\u767A\u3059\u308B\u3088\u3046\u306B\u306A\u308A\u307E\u3059\u3002
 OptionPanel.use_tabbed_pane=\u30BF\u30D6\u8868\u793A\u6A5F\u80FD\u3092\u4F7F\u7528
@@ -1353,6 +1367,7 @@ OptionPanel.vertical_child_gap.tooltip=\u5B50\u30CE\u30FC\u30C9\u9593\u306E\u4E0
 OptionPanel.vi=\u30D9\u30C8\u30CA\u30E0\u8A9E\uFF0FTi\u1EBFng Vi\u1EC7t
 OptionPanel.wheel_velocity=\u52A0\u901F\u5EA6
 OptionPanel.wheel_velocity.tooltip=\u5024\u3092\u5927\u304D\u304F\u3059\u308B\u3068\u3001\u30DE\u30C3\u30D7\u4E0A\u306E\u30DE\u30A6\u30B9\u30DB\u30A4\u30FC\u30EB\u3067\u306E\u79FB\u52D5\u901F\u5EA6\u304C\u901F\u304F\u306A\u308A\u307E\u3059\u3002
+OptionPanel.wide_hexagon=\u592A\u3044\u516D\u89D2\u5F62
 OptionPanel.windows=Windows
 OptionPanel.zh_CN=\u4E2D\u56FD\u8A9E\uFF08\u7C21\u4F53\u5B57\uFF09\uFF0F\u7B80\u4F53\u5B57
 OptionPanel.zh_TW=\u4E2D\u56FD\u8A9E\uFF08\u7E41\u4F53\u5B57\uFF09\uFF0F\u7E41\u9AD4\u5B57
@@ -1749,6 +1764,7 @@ split=\u30CE\u30FC\u30C9\u3092\u5206\u5272(&S)
 SplitConditionAction.text=Not \u3092\u9664\u53BB
 SplitNode.text=\u30CE\u30FC\u30C9\u3092\u5206\u5272(&S)
 SplitNode.tooltip=\u30CE\u30FC\u30C9\u3092\u5206\u5272\u3057\u307E\u3059\u3002
+SplitToWordsAction.text=\u4E00\u884C {0} \u5358\u8A9E\u306B\u5206\u5272
 STANDARD_FORMAT=\u6A19\u6E96
 stop_processing=\u9069\u7528\u3092\u4E2D\u6B62
 StringFlavorHandler=\u30D7\u30EC\u30FC\u30F3\u30C6\u30AD\u30B9\u30C8\uFF1A\u30CE\u30FC\u30C9\u968E\u5C64\u4ED8\u304D\uFF08\u6298\u308A\u7573\u3080\uFF09
