--- a/freeplane/resources/translations/Resources_pt_PT.properties
+++ b/freeplane/resources/translations/Resources_pt_PT.properties
@@ -977,6 +977,7 @@ OptionPanel.compare_as_number=Comparar como n\u00FAmeros
 OptionPanel.convert_to_current_version=<html>Converter automaticamente mapas de vers\u00F5es anteriores<br/>do Freeplane para a vers\u00E3o atual?</html>
 OptionPanel.convert_to_current_version.tooltip=<html>S\u00F3 pode abrir mapas sem convers\u00E3o para mapas muito grandes <br/>que n\u00E3o precisem de ser convertidos(conhecimento especializado)
 OptionPanel.copyFormatToNewSibling=Copiar formato para novos parentes
+OptionPanel.copyFormatToNewSiblingIncludesIcons=Copiar formato com \u00EDcones 
 OptionPanel.cs=Checo / \u010Desky
 OptionPanel.cut_nodes_without_question=Cortar n\u00F3s sem confirma\u00E7\u00E3o?
 OptionPanel.cut_nodes_without_question.tooltip=Se esta caixa estiver marcada os n\u00F3s s\u00E3o cortados sem confirma\u00E7\u00E3o.. Isto pode causar perda n\u00E3o intencional de informa\u00E7\u00E3o.
