--- a/freeplane/viewer-resources/translations/Resources_en.properties
+++ b/freeplane/viewer-resources/translations/Resources_en.properties
@@ -972,6 +972,7 @@ OptionPanel.compare_as_number=Compare as numbers
 OptionPanel.convert_to_current_version=<html>Automatically convert maps of older Freeplane versions <br>to the current version?</html>
 OptionPanel.convert_to_current_version.tooltip=<html>Only for very big maps that don't need to be converted <br>(this is expert knowledge) you can open the maps without conversion.</html>
 OptionPanel.copyFormatToNewSibling=Copy format to new siblings
+OptionPanel.copyFormatToNewSiblingIncludesIcons=Copy format with icons 
 OptionPanel.cs=Czech / \u010Desky
 OptionPanel.cut_nodes_without_question=Cut nodes without confirmation?
 OptionPanel.cut_nodes_without_question.tooltip=If this check box is set the nodes are cut without confirmation. This can cause loss of information if pressed without intention.
